# autoware_core

./: README.md  README_QCS6490.md  codebase_structure.md  codebase_structure_detailed.md
common/autoware_lanelet2_utils/: CMakeLists.txt  README.md
common/autoware_motion_utils/: CMakeLists.txt  README.md
common/autoware_qp_interface/: CMakeLists.txt
docs/: autoware_core_api_structure.md  qcs6490_migration.md
localization/autoware_ekf_localizer/: CMakeLists.txt  README.md
localization/autoware_gyro_odometer/: CMakeLists.txt  README.md
perception/autoware_ground_filter/config/: ground_segmentation_qcs6490.param.yaml
perception/autoware_ground_filter/launch/: ground_filter_qcs6490.launch.py
planning/autoware_mission_planner/: CMakeLists.txt  README.md
planning/autoware_path_generator/: CMakeLists.txt  README.md
planning/autoware_velocity_smoother/: CMakeLists.txt  README.md
sensing/autoware_downsample_filters/: CMakeLists.txt
sensing/autoware_downsample_filters/config/: voxel_grid_downsample_filter_node_qcs6490.param.yaml
sensing/autoware_downsample_filters/launch/: voxel_grid_downsample_filter_node_qcs6490.launch.xml
sensing/autoware_downsample_filters/src/voxel_grid_downsample_filter/: voxel_grid_downsample_filter_node.cpp  voxel_grid_downsample_filter_node.hpp
sensing/autoware_downsample_filters/src/voxel_grid_downsample_filter/gpu/: adreno_voxel_grid.cpp  adreno_voxel_grid.hpp
